# egui_winit_wgpu

./: .gitignore  Cargo.toml  README.md
examples/: demo.rs
src/: backend.rs  lib.rs  painter.rs  storage.rs
src/shaders/: egui.frag  egui.vert
