[package]
name = "egui_wgpu"
version = "0.1.0"
authors = ["John Michael Bell <johnmichaelbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.4"
chrono = "0.4"
clipboard = "0.5"
egui = { version = "0.1", features = ["serde", "serde_json"] }
futures = "0.3"
raw-window-handle = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vk-shader-macros = "0.2"
webbrowser = "0.5"
wgpu = "0.6"
wgpu-subscriber = "0.1"
winit = "0.22"
