[package]
name = "egui_winit_wgpu"
version = "0.1.0"
authors = ["John Michael Bell <johnmichaelbell@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.4"
chrono = "0.4"
clipboard = "0.5"
egui = { version = "0.1", features = ["serde", "serde_json"] }
futures = "0.3"
inline-spirv = "0.1.1"
raw-window-handle = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "0.5"
wgpu = "0.6"
wgpu-subscriber = "0.1"
winit = "0.23"
